[package]
name = "pollo"
version = "0.1.0"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2.1.0"

# Maybe learning those?
# env_logger = "0.8.4"
# anyhow = "1.0.41"
